# llm_explain

./: LICENSE  README.md  pyproject.toml  setup.py
llm_explain/: __init__.py  utils.py
llm_explain/data/: __init__.py  samples.py
llm_explain/llm/: __init__.py  propose.py  validate.py
llm_explain/models/: __init__.py  cluster.py  diff.py
llm_explain/tests/: __init__.py  test_cluster.py  test_diffs.py  test_propose.py  test_proposer.py  test_validate.py
notebooks/: 1-1_extension1_precise.ipynb  1-1_extension2_goal_driven.ipynb  1-1_extension3_multiple_exp.ipynb  1-1_proposer_validator.ipynb  2_clustering.ipynb
related/: main.tex  references.bib
