[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_explain"
version = "0.1.0"
description = "Tools that use LLM to explain datasets"
authors = [
  { name="Ruiqi Zhong", email="ruiqizhong1997@gmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai",
  "pydantic",
  "requests",
  "numpy",
  "scikit-learn",
  "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/ruiqi-zhong/llm_explain"
"Repository" = "https://github.com/ruiqi-zhong/llm_explain"